all fine : twitter:og fixed, contrast fixed > ready for upload:100%

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -321,3 +321,6 @@ section {
   width: 100%;
   height: 100%;
 }
+.text-success {
+  color: #14e785!important;
+}
